cms/package/skin/src/main/webapp/screen.css
/* ... */
.commandline-48{background-image:url("images/icons/commandline-48.png")}
.system-properties-48{background-image:url("images/icons/system-properties-48.png")}
.system-info-48{background-image:url("images/icons/system-info-48.png")}

.state-review-16{background-image:url("images/icons/state-review-16.gif")}
.state-changed-16{background-image:url("images/icons/state-changed-16.gif")}
.state-new-16{background-image:url("images/icons/state-new-16.gif")}
.state-live-16{background-image:url("images/icons/state-live-16.gif")}

.permissions-16{background-image:url("images/icons/permissions-16.png")}

.arrow-sort-down-16{background-image:url("images/icons/arrow-sort-down-16.png")}
.arrow-sort-up-16{background-image:url("images/icons/arrow-sort-up-16.png")}
.remove-field-16{background-image:url("images/controls/close-control.gif")}

.arrow-paging-previous-16{background-image:url("images/icons/arrow-paging-previous-16.png")}
.arrow-paging-next-16{background-image:url("images/icons/arrow-paging-next-16.png")}

.user-16{background-image:url("images/icons/user-16.png")}
.user-32{background-image:url("images/icons/user-32.png")}
.user-48{background-image:url("images/icons/user-48.png")}
.user-128{background-image:url("images/icons/user-128.png")}

.groups-16{background-image:url("images/icons/groups-16.png")}
.groups-32{background-image:url("images/icons/groups-32.png")}
.groups-48{background-image:url("images/icons/groups-48.png")}
.groups-128{background-image:url("images/icons/groups-128.png")}


.document-new-48{background-image:url("images/icons/document-48.png")}
.user-48{background-image:url("images/icons/groups-48.png")}
.folder-48{background-image:url("images/icons/folder-32.png")}

.image-add-48{background-image:url("images/icons/image-add-48.png")}
.image-add{background-image:url("images/icons/image-add-16.png");}

.website-add-128{background-image:url("images/icons/website-add-128.png")}
.website-add-48{background-image:url("images/icons/website-add-48.png")}
.website-add-24{background-image:url("images/icons/website-add-24.png");}
.website-add-16{background-image:url("images/icons/website-add-16.png");}

.rename-128{background-image:url("images/icons/rename-128.png")}
.rename-48{background-image:url("images/icons/rename-48.png")}
.rename-24{background-image:url("images/icons/rename-24.png");}
.rename-16{background-image:url("images/icons/rename-16.png");}

.document-lock-16{background-image:url("images/icons/document-lock-16.png")}

.dialog-information-48{background-image:url("images/icons/dialog-information-48.png")}
.hippo-icon-question-48{background-image:url("images/icons/dialog-question-48.png")}

.panel-toggle-version-16{background-image:url("images/icons/panel-toggle-version-16.png");}
.panel-toggle-version-16 a:hover{cursor: pointer}

.edit-16{background-image:url("images/icons/edit-16.png")}
.delete-16{background-image:url("images/icons/edit-delete-16.png")}
.add-16{background-image:url("images/icons/list-add-16.png")}
.remove-16{background-image:url("images/icons/edit-delete-16.png")}

.delete-inline-16{background-image:url("images/icons/delete-inline-16.png")}
.delete-inline-24{background-image:url("images/icons/delete-inline-24.png")}
.delete-inline-48{background-image:url("images/icons/delete-inline-48.png")}
.delete-inline-128{background-image:url("images/icons/delete-inline-128.png")}

.up-16{background-image:url("images/icons/go-up-16.png")}
.down-16{background-image:url("images/icons/go-down-16.png")}

/* temp quick hack */
.revert_ico{background-image:url("images/icons/document-revert-16.png")} 
.save_ico{background-image:url("images/icons/document-save-16.png")}

.templateitemup_ico{background-image:url("images/icons/go-up.png")}
.templateitemdown_ico{background-image:url("images/icons/go-down.png")}

.reqdelete_ico{background-image:url("images/icons/workflow-requestdelete-16.png")}
.reqpublish_ico{background-image:url("images/icons/workflow-requestpublish-16.png")}
.reqdepublish_ico{background-image:url("images/icons/workflow-requestunpublish-16.png")}
.reqschedpublish_ico{background-image:url("images/icons/workflow-requestpublish-16.png")}
.reqscheddepublish_ico{background-image:url("images/icons/workflow-requestunpublish-16.png")}
.publish-16, .publish_ico{background-image:url("images/icons/publish-16.png")}
.depublish-16, .depublish_ico{background-image:url("images/icons/unplublish-16.png")}
.publish-schedule-16{background-image:url("images/icons/publish-schedule-16.png")}

.copy-16{background-image:url("images/icons/copy-16.png")}
.move-16{background-image:url("images/icons/move-16.png")}

.depublish-schedule-16{background-image:url("images/icons/unpublish-scheduled-16.png")}

.reqcancel_ico{background-image:url("images/icons/unplublish-16.png")}
.reqaccept_ico{background-image:url("images/icons/workflow-accept-16.png")}
.reqreject_ico{background-image:url("images/icons/workflow-requestunpublish-16.png")}

.adddocument_ico{background-image:url("images/icons/document-new-16.png")}
.addfolder_ico{background-image:url("images/icons/folder-new-16.png")}
.addextended_ico{background-image:url("images/icons/folder-extended-new-16.png")}

.copymodelrequest_ico{background-image:url("images/icons/document-copy-16.png")}
.editmodel_ico{background-image:url("images/icons/edit-16.png")}
.createnamespace_ico{background-image:url("images/icons/document-new-16.png")}
.modelreq_ico{background-image:url("images/icons/refresh-16.png")}
.createtyperequest_ico{background-image:url("images/icons/document-new-16.png")}

#context-menu-container {
  text-align: left;
  position: absolute;
  display: block;
  z-index: 10000;
  color: #000;
  padding:3px;
}

#global-feedback-container {
  border: 1px solid #e3e3e3;
  background-color: #FFF6E0;
  color: #333333;
  padding-top: 2px;
}

